--- a/views/Dashboard/status-pendaftaran.ejs
+++ b/views/Dashboard/status-pendaftaran.ejs
@@ -10,25 +10,27 @@
                         <tr>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">ID Pendaftaran</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Name</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">No.Telpon</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Alamat</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Mata Kuliah Ujian</th>
                             <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Tanggal Daftar</th>
-                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">NIM</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Nilai Sebelumnya</th>
+                            <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase">Alasan</th>
+                            <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Bukti Pembayaran</th>
                             <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase">Aksi</th>
                         </tr>
                     </thead>
                     <tbody class="divide-y divide-gray-200">
-                        <% pendaftaran.forEach(mahasiswa => { %>
+                        <% pendaftaran.forEach(status => { %>
                             <tr>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.id %></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.mahasiswa.nama %></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.mahasiswa.no_telpon %></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.mahasiswa.alamat %></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.createdAt.toLocaleDateString() %></td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= mahasiswa.mahasiswa.nim %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.id %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.mahasiswa.nama %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.ujian.nama_matkul %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.tanggal_pendaftaran.toLocaleDateString() %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.nilai_sebelumnya %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><%= status.alasan %></td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800"><img class="w-24 h-auto" src="<%= status.bukti_pembayaran %>" alt="Maria"></td>
                                 <td class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium">
                                     <form action="/admin/deletePendaftaran" method="POST" onsubmit="return confirm('Are you sure you want to delete this mahasiswa?');">
-                                        <input type="hidden" name="id" value="<%= mahasiswa.id %>">
+                                        <input type="hidden" name="id" value="<%= status.id %>">
                                         <button type="submit" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 disabled:opacity-50 disabled:pointer-events-none">Delete</button>
                                     </form>                                </td>
                             </tr>
